--- a/services.html
+++ b/services.html
@@ -1,7 +1,7 @@
 <div style="text-align:center; margin-top:40px;"><img src="logoo.avif"width="250" height="250";>
 </div>
 <div style="text-align:center; margin-top:40px;">
-<a style="padding-right:20px;" href="Home.html">Home</a>
+<a style="padding-right:20px;" href="index.html">Home</a>
 <a style="padding-right:20px;" href="About.html">About</a>
 <a style="padding-right:20px;" href="Services.html">Services</a>
 </div>
